# sdljoystick4java

./: .gitignore  README.md  build.xml
docs/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  serialized-form.html
docs/javadoc/com/illcode/sdljoystick4java/: GameController.html  Joystick.BallDelta.html  Joystick.GUID.html  Joystick.html  SdlConstants.html  SdlException.html  SdlNative.html  package-frame.html  package-summary.html  package-tree.html
native/: .gitignore  BUILDING.md  CMakeLists.txt
native/VS2017/: .gitignore  ExternalLibs.props.sample  sdljoystick4java.sln  sdljoystick4java.vcxproj
native/antbuild/: .gitignore  build-x64.bat  build-x86.bat  build.xml  com_illcode_sdljoystick4java_SdlNative.cpp  sample-build.properties  sample-setvars.bat  toolchain-windows.properties
native/antbuild/src/: com_illcode_sdljoystick4java_SdlNative.cpp
native/sample-initial-cache/: initial-cache-win32-x64.cmake  initial-cache-win32-x86.cmake
native/sdljoystick4java/: .gitignore  build.bat  com_illcode_sdljoystick4java_Native.cpp  com_illcode_sdljoystick4java_Native.h  com_illcode_sdljoystick4java_SdlNative.cpp  com_illcode_sdljoystick4java_SdlNative.h  cpp.hint  pch.h  sdljoystick4java.sln  sdljoystick4java.vcxproj  setvars-sample.bat
native/sdljoystick4java/vs2017/: sdljoystick4java.vcxproj
native/src/: com_illcode_sdljoystick4java_SdlNative.cpp  com_illcode_sdljoystick4java_SdlNative.h  pch.cpp  pch.h  sdljoystick4java.cpp  sdljoystick4java.h
scripts/: dist.bat  generate-jni-headers.bat  make-javadoc.bat  run32.bat  run64.bat
src/com/illcode/sdljoystick4java/: GameController.java  Joystick.java  Native.java  SdlConstants.java  SdlException.java  SdlNative.java
src/com/illcode/sdljoystick4java/test/: BasicTests.java
